# Jopnal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake  Macros.cmake
doc/: Doxyfile
examples/: CMakeLists.txt
extlibs/: Android.mk  STB License.txt  Tinyobjloader License.txt  extlibs.7z
include/: LightSource.cpp
project/: Jopnal Editor.vcxproj  Jopnal Editor.vcxproj.filters  Jopnal Engine.rc  Jopnal Engine.sln  Jopnal Engine.vcxproj  Jopnal Engine.vcxproj.filters  Jopnal Engine.vcxproj.orig  Jopnal Main.vcxproj  Jopnal Main.vcxproj.filters  Jopnal Resources.sdf  Jopnal Resources.vcxproj  resource.h  (+1 more)
src/Jopnal/: AABB.cpp  Android.mk  CMakeLists.txt  Precompiled.cpp  Precompiled.hpp
src/Jopnal/Android/MakefileShared/: Android.mk
src/Jopnal/Audio/: AlTry.cpp  AlTry.hpp  AudioBuffer.cpp  AudioDevice.cpp  AudioReader.cpp  AudioReader.hpp  CMakeLists.txt  Listener.cpp  SoundBuffer.cpp  SoundEffect.cpp  SoundSource.cpp  SoundStream.cpp  SoundStream.cpp.rej  Soundsource.cpp
src/Jopnal/Core/: CMakeLists.txt  Component.cpp  DebugHandler.cpp  Engine.cpp  Engine.cpp.orig  FileLoader.cpp  FileManager.cpp  Model.cpp  Object.cpp  RecourceManager.cpp  Resource.cpp  ResourceManager.cpp  ResourceTexture.cpp  Scene.cpp  SceneLoader.cpp  SerializeInfo.cpp  Serializer.cpp  SettingCallback.cpp  SettingManager.cpp  StateLoader.cpp  SubSystem.cpp
src/Jopnal/Core/Android/: ActivityState.cpp  ActivityState.hpp  GooglePlayService.cpp  GooglePlayService.hpp
src/Jopnal/Core/Win32/: Win32.hpp
src/Jopnal/Editor/: Command.cpp  CommandBuffer.cpp  WindowUpdater.cpp  main.cpp
src/Jopnal/Editor/Forms/: MainWindow.cpp  ObjectWindow.cpp  OpenGLWindow.cpp  PropertyWindow.cpp  ToolWindow.cpp
src/Jopnal/Editor/Precompiled/: Precompiled.cpp  Precompiled.hpp
src/Jopnal/Graphics/: AnimatedSprite.cpp  AnimationAtlas.cpp  BoxMesh.cpp  BoxModel.cpp  Buffer.cpp  CMakeLists.txt  CMakeLists.txt.orig  Camera.cpp  CircleMesh.cpp  Color.cpp  CompressedCubemap.cpp  CompressedImage.cpp  CompressedTexture2D.cpp  Cubemap.cpp  CubemapDepth.cpp  DefaultDrawable.cpp  Drawable.cpp  Drawable.cpp.orig  EnvironmentRecorder.cpp  Font.cpp  GenericDrawable.cpp  GlCheck.cpp  GlCheck.hpp  GlState.cpp  Glyph.cpp  Image.cpp  Image.cpp.orig  Layer.cpp  LightSource.cpp  LightSource.hpp  MainRenderTarget.cpp  Material.cpp  Mesh.cpp  Model.cpp  Model.cpp.orig  ModelLoader.cpp  OpenGL.cpp  PostProcessor.cpp  RectangleMesh.cpp  RectangleModel.cpp  (+29 more)
src/Jopnal/Graphics/Culling/: CullerComponent.cpp  CullerComponent.hpp  CullingWorld.cpp  CullingWorld.hpp
src/Jopnal/Graphics/Mesh/: BoxMesh.cpp  Capsule.cpp  CapsuleMesh.cpp  CircleMesh.cpp  ConeMesh.cpp  Cylinder.cpp  CylinderMesh.cpp  Mesh.cpp  RectangleMesh.cpp  SphereMesh.cpp
src/Jopnal/Graphics/OpenGL/: EglCheck.cpp  EglCheck.hpp  GlCheck.cpp  GlCheck.hpp  GlState.cpp  OpenGL.cpp  gl_4.5.c  gl_4.5.h
src/Jopnal/Graphics/STB/: stbi_DDS_aug.h
src/Jopnal/Graphics/Texture/: CompressedCubemap.cpp  CompressedTexture2D.cpp  Cubemap.cpp  Cubemap.cpp.orig  CubemapDepth.cpp  Texture.cpp  Texture2D.cpp  Texture2DDepth.cpp  TextureAtlas.cpp  TextureSampler.cpp
src/Jopnal/Main/: Activity.cpp  CMakeLists.txt  Main.cpp
src/Jopnal/Main/Android/: android_native_app_glue.c  android_native_app_glue.h
src/Jopnal/OpenGL/: gl_4.5.c  gl_4.5.h
src/Jopnal/Physics/: CMakeLists.txt  Collider.cpp  Collider2D.cpp  ContactInfo.cpp  ContactListener.cpp  Joint.cpp  PhantomBody.cpp  PhysicsWorld.cpp  RayInfo.cpp  RayInfo2D.cpp  RigidBody.cpp  RigidBody2D.cpp  World.cpp  World2D.cpp
src/Jopnal/Physics/Detail/: WorldImpl.cpp  WorldImpl.hpp  WorldImpl2D.cpp  WorldImpl2D.hpp
src/Jopnal/Physics/Joint/: GearJoint.cpp  Joint.cpp  PistonJoint.cpp  PulleyJoint.cpp  RopeJoint.cpp  RotationJoint.cpp  WeldJoint.cpp  WheelJoint.cpp
src/Jopnal/Physics/Shape/: BoxShape.cpp  BoxShape2D.cpp  CapsuleShape.cpp  CircleShape2D.cpp  CollisionShape.cpp  CollisionShape2D.cpp  CompoundShape.cpp  ConeShape.cpp  ConvexHullShape.cpp  ConvexHullShape2D.cpp  CylinderShape.cpp  FrustumShape.cpp  InfinitePlaneShape.cpp  RectangleShape.cpp  RectangleShape2D.cpp  SphereShape.cpp  StaticMeshShape.cpp  TerrainShape.cpp  TerrainShape2D.cpp
src/Jopnal/Physics2D/: CMakeLists.txt  Collider2D.cpp  ContactInfo2D.cpp  ContactListener2D.cpp  Joint2D.cpp  RayInfo2D.cpp  RigidBody2D.cpp  World2D.cpp
src/Jopnal/Physics2D/Detail/: WorldImpl2D.cpp
src/Jopnal/Physics2D/Joint/: GearJoint2D.cpp  Joint2D.cpp  MotorJoint2D.cpp  PistonJoint2D.cpp  PulleyJoint2D.cpp  RopeJoint2D.cpp  RotationJoint2D.cpp  WeldJoint2D.cpp  WheelJoint2D.cpp
src/Jopnal/Physics2D/Shape/: CapsuleShape2D.cpp  CircleShape2D.cpp  CollisionShape2D.cpp  CompoundShape2D.cpp  ConeShape2D.cpp  ConvexHullShape2D.cpp  RectangleShape2D.cpp  TerrainShape2D.cpp
src/Jopnal/Precompiled/: CMakeLists.txt  Precompiled.hpp  Precompiled.hpp.orig  PrecompiledEmpty.hpp
src/Jopnal/Resources/: CMakeLists.txt  Resources.cpp  Resources.hpp
src/Jopnal/Root/: CMakeLists.txt
src/Jopnal/Utility/: Activateable.cpp  Any.cpp  Assert.cpp  Assert.cpp.orig  CMakeLists.txt  Clock.cpp  CommandHandler.cpp  DateTime.cpp  DirectoryWatcher.cpp  Json.cpp  Message.cpp  MessageUtil.cpp  PtrWrapper.cpp  Randomizer.cpp  Thread.cpp
src/Jopnal/Utility/Unix/: ThreadImpl.cpp  ThreadImpl.hpp
src/Jopnal/Utility/Win32/: DirectoryWatcherImpl.cpp  DirectoryWatcherImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp
src/Jopnal/Window/: CMakeLists.txt  Controller.cpp  GlCheck.cpp  GlCheck.hpp  InputEnumsImpl.hpp  Keyboard.cpp  Mouse.cpp  Sensor.cpp  SensorManager.cpp  SensorManager.hpp  Touch.cpp  Vibrator.cpp  VideoInfo.cpp  Window.cpp  WindowEventHandler.cpp
src/Jopnal/Window/Android/: InputEnumsImpl.cpp  InputHandling.cpp  InputHandling.hpp  Sensor.cpp  Sensor.hpp  SensorImpl.cpp  SensorImpl.hpp  Vibrator.cpp  Vibrator.hpp  VideoInfoImpl.cpp  VideoInfoImpl.hpp  WindowImpl.cpp  WindowImpl.hpp
src/Jopnal/Window/Desktop/: InputEnumsImpl.cpp  SensorImpl.cpp  SensorImpl.hpp  VideoInfoImpl.cpp  VideoInfoImpl.hpp  WindowDesktop.cpp  WindowDesktop.hpp  WindowImpl.cpp  WindowImpl.hpp
(+1690 files in other folders)
